--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     "vtex.checkout-resources": "0.x",
     "vtex.store-resources": "0.x",
     "vtex.product-context": "0.x",
-    "vtex.order-manager": "0.x"
+    "vtex.order-manager": "0.x",
+    "vtex.styleguide": "9.x"
   },
   "registries": [
     "smartcheckout"
