--- a/react/package.json
+++ b/react/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint . --ext .ts,.tsx",
-    "test": "vtex-test-tools test unit",
-    "test:watch": "vtex-test-tools test unit --watch",
-    "test:coverage": "vtex-test-tools test unit --coverage"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "react": "^16.12.0",
@@ -16,7 +13,6 @@
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
-    "@vtex/test-tools": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-vtex": "^12.5.1",
     "eslint-config-vtex-react": "^6.5.1",
