--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -3,34 +3,18 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "jsx": "react",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "noEmitOnError": false,
+    "lib": ["dom", "es2017"],
     "module": "esnext",
     "moduleResolution": "node",
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
     "target": "es2017",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "jest"
-    ]
+    "types": ["node"],
+    "skipLibCheck": true,
+    "strict": false
   },
-  "exclude": [
-    "node_modules"
-  ],
   "include": [
-    "./**/*.ts",
-    "./**/*.tsx"
+    "./typings/*.d.ts",
+    "./**/*.tsx",
+    "./**/*.ts"
   ]
 }
